Fix footer padding on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -642,7 +642,7 @@ padding: 0px!important;
    ========================================================================== */
 
 .content-info {
-padding: 30px 0px;
+padding: 30px 15px;
 text-align: center;
 }
 
